Initial Star Processing Model
Single Node Single Process Task-Based Runtime

Features a engine and two sample programs using the star framework

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 node_modules/
 dist/
 scratchwork/
+src/star/scratchwork/
+*.out
+*.star
+src/star/.vscode/
 
 # Compiled Java class files
 *.class
