--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     network_mode: "host"
     environment:
-      - ADDRESS='01:02:03:04:05:06:07:08'
+      - ADDRESS=01:02:03:04:05:06:07:08
       - IOPORT=2321
-      - TRANSPORT='tcp://127.0.0.1:9281'
+      - TRANSPORT=tcp://127.0.0.1:9281
 
