--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,6 @@ dependencies = [
     "rich==13.7.1",
     "telnetlib3==2.0.4",
     "typing-extensions==4.12.2",
+    "python-dotenv==1.0.1",
+    "urllib3==2.2.2",
 ]
