--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,5 +14,5 @@ dependencies = [
     "telnetlib3==2.0.4",
     "typing-extensions==4.12.2",
     "python-dotenv==1.0.1",
-    "urllib3==2.2.2",
+    "paho-mqtt==2.1.0"
 ]
